--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "KIy8PgXL-2fH"
       },
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "pJaQGNND-2fK"
       },
@@ -111,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "bFzp7ROY_QYY"
       },
@@ -170,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "t4WXEDFS_ThY"
       },
@@ -208,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 7,
       "metadata": {
         "id": "khrxOcEB-2fM"
       },
@@ -217,14 +217,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Run benchmarking for random_predict: "
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Ваш алгоритм угадывает число в среднем за: 101 попытки\n",
+            "Run benchmarking for random_predict: Ваш алгоритм угадывает число в среднем за: 100 попытки\n",
             "Run benchmarking for game_core_v2: Ваш алгоритм угадывает число в среднем за: 33 попытки\n"
           ]
         }
@@ -268,57 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
-      "metadata": {
-        "id": "IvaUUPIe-2fN"
-      },
-      "outputs": [],
-      "source": [
-        "def game_core_v3(number: int = 1) -> int:\n",
-        "    \"\"\"\n",
-        "    Args:\n",
-        "        number (int, optional): Загаданное число. Defaults to 1.\n",
-        "\n",
-        "    Returns:\n",
-        "        int: Число попыток\n",
-        "    \"\"\"\n",
-        "    # Ваш код начинается здесь\n",
-        "    count = 0\n",
-        "    predict = np.random.randint(1, 101)\n",
-        "\n",
-        "    while number != predict:\n",
-        "        count += 1\n",
-        "        if number % 2 == 0: # четное число\n",
-        "            if number % 3 == 0: # число делится на 2 и 3\n",
-        "                if number % 5 == 0: # число делится на 2,3,5\n",
-        "                    predict += 30\n",
-        "                else: # число делится на 2 и 3, но не на 5\n",
-        "                    predict += 6\n",
-        "            elif number % 5 == 0: # число делится на 2,5, но не на 3\n",
-        "                predict += 10\n",
-        "            else: # число делится на 2, но не на 3 и 5\n",
-        "                if number % 16 == 0: # число делится на 4\n",
-        "                    predict += 16\n",
-        "                elif number % 8 == 0: # число делится на 8\n",
-        "                    predict += 8\n",
-        "                if number % 4 == 0: # число делится на 8\n",
-        "                    predict += 4\n",
-        "        else:  # нечетное число\n",
-        "            if number % 3 == 0: # число делится на 3, но не на 2\n",
-        "                if number % 5 == 0: # число делится на 3,5, но не на 2\n",
-        "                    \n",
-        "                else: # число делится на 3, но не на 5 и 2\n",
-        "                    \n",
-        "            else: # число не делится на 3 и 2 \n",
-        "\n",
-        "    # Ваш код заканчивается здесь\n",
-        "\n",
-        "    return count"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -367,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 9,
       "metadata": {
         "id": "giSKBUmgCAeh"
       },
@@ -387,7 +330,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -418,7 +361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
